--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Bootstrap Multi Step Form</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
-<link rel="stylesheet" href="../multi steo form/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -164,7 +164,7 @@
   </div>
 </div>
 
-<script  src="../multi steo form/js/function.js"></script>
+<script  src="js/function.js"></script>
 
 </body>
 </html>
